--- a/index.html
+++ b/index.html
@@ -2220,8 +2220,8 @@
                             {
                                 role: "system",
                                 content: language === 'français' 
-                                    ? "Vous êtes un expert en création de contenu LinkedIn. Créez des posts engageants et professionnels qui génèrent des interactions. Répondez toujours en français."
-                                    : "You are an expert in LinkedIn content creation. Create engaging and professional posts that generate interactions. Always respond in English."
+                                    ? "Écrivez comme si vous parliez à un ami. Utilisez des phrases courtes et simples. Pas d'emoji. Pas de formatage. Faites beaucoup de retours à la ligne pour la lecture sur mobile. Évitez les accroches génériques et les structures question-réponse. Si vous posez une question finale, gardez-la simple comme 'Qu'en pensez-vous?' et uniquement quand ça a du sens. Écrivez comme un humain qui partage son expérience, pas comme une IA."
+                                    : "Write like you're talking to a friend. Use short and simple sentences. No emojis. No formatting. Add plenty of line breaks for mobile reading. Avoid generic hooks and question-answer structures. If you ask a final question, keep it simple like 'What's your take?' and only when it makes sense. Write like a human sharing their experience, not like AI."
                             },
                             {
                                 role: "user",
